--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/annakky/annakky.github.io"
+    "url": "https://github.com/junhobaik/junhobaik.github.io"
   },
   "bugs": {
     "url": "https://github.com/junhobaik/junhobaik.github.io/issues"
